# CollaBoard

./: .gitignore  Pipfile  README.md  manage.py  pyproject.toml
apps/api/: docx_generator.py  pdf_generator.py  urls.py  utils.py  views.py
apps/api/management/: __init__.py
apps/api/tests/: __init__.py
apps/base/: admin.py  forms.py  models.py  urls.py  views.py
apps/base/migrations/: 0001_initial.py  0002_customuser_meetings_created_count_and_more.py  0003_alter_customuser_options_alter_customuser_first_name_and_more.py  0004_passwordresettoken.py
apps/base/tests/: __init__.py
apps/director/: admin.py  forms.py  models.py  urls.py  views.py
apps/director/migrations/: 0001_initial.py  0002_alter_question_options_alter_question_meeting_and_more.py  0002_meeting_duration_in_seconds.py  0003_meeting_total_questions_asked.py  0004_meeting_summarized_meeting.py
apps/director/tests/: __init__.py  conftest.py
apps/meeting/: admin.py  base.py  constants.py  consumers.py  models.py  routing.py  urls.py  utils.py  views.py
apps/meeting/migrations/: 0001_initial.py  (+4 more)
collaboard/: asgi.py  settings.py  urls.py
collaboard/apps/: __init__.py
collaboard/collaboard/: __init__.py  settings.py  urls.py  wsgi.py
collaboard/static/: 403.css  500.css  error.css
collaboard/templates/: 403.html  404.html  500.html
media/exports/: meeting_c93ce37d-70b1-44e6-8519-41c9b751883e.docx
static/: index.css  navbar.css  navbar_guest.css  navbar_user.css
templates/: 403.html  404.html  500.html  index.html  navbar.html  navbar_guest.html  navbar_user.html
(+99 files in other folders)
