[project]
name = "CollaBoard"
version = "0.1.0"
description = "A web app for people who seek a platform to run simple but efficient meetings."
authors = [{name = "Jovani", email = "jovani.badinga@gmail.com"}]
requires-python = ">=3.12"

# Ruff configuration - fast Python linter (like a grammar checker for code)
[tool.ruff]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DJ"]
ignore = [
    "E501",  # Line too long (handled by black)
    "S101",  # Use of assert (common in Django)
]
line-length = 88
target-version = "py311"
exclude = ["migrations", "venv", ".venv"]

# Black configuration - code formatter (makes your code pretty)
[tool.black]
line-length = 88
target-version = ['py311']
extend-exclude = '''/(migrations|venv|\.venv)/'''

# MyPy configuration - type checker (catches errors before runtime)
[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "myproject.settings"